# gtest-demo

./: .gitignore  CMakeLists.txt  readme.md
test/: CMakeLists.txt  lib_test.cpp
